--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,15 @@
 			<artifactId>java-uuid-generator</artifactId>
 			<version>4.2.0</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/javax.websocket/javax.websocket-api -->
+		<dependency>
+			<groupId>javax.websocket</groupId>
+			<artifactId>javax.websocket-api</artifactId>
+			<version>1.1</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
